..F....... [ZBX-16874] fixed map-type widget clipping in Internet Explorer

--- a/frontends/php/assets/styles/dark-theme.css
+++ b/frontends/php/assets/styles/dark-theme.css
@@ -4099,9 +4099,6 @@ svg {
 .sysmap-widget-container {
   overflow: hidden;
   height: 100%;
-  width: 100%;
-  max-height: 100%;
-  max-width: 100%;
   display: flex; }
 
 @supports (-ms-ime-align: auto) {
