--- a/frontends/php/assets/styles/hc-light.css
+++ b/frontends/php/assets/styles/hc-light.css
@@ -4059,9 +4059,6 @@ svg {
 .sysmap-widget-container {
   overflow: hidden;
   height: 100%;
-  width: 100%;
-  max-height: 100%;
-  max-width: 100%;
   display: flex; }
 
 @supports (-ms-ime-align: auto) {
