--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -5832,9 +5832,6 @@ svg {
 .sysmap-widget-container {
 	overflow: hidden;
 	height: 100%;
-	width: 100%;
-	max-height: 100%;
-	max-width: 100%;
 	display: flex;
 }
 
